--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,7 @@
 }
 
 .sec5{
-    background-image: url('/asset/Rectangle\ 9.png');
+    background-image: url('/asset/Rectangle 9.png');
     background-repeat: no-repeat;
     background-size: cover;
     display: flex;
