--- a/styles/style.css
+++ b/styles/style.css
@@ -196,7 +196,7 @@
 }
 
 .sec5 {
-    background-image: url('/images/sec-bg.png');
+    background-image: url('/asset/pngwing\ 6.png');
     display: flex;
     justify-content: center;
     align-items: center;
