--- a/styles/style.css
+++ b/styles/style.css
@@ -196,10 +196,11 @@
 }
 
 .sec5 {
-    background-image: url('/asset/pngwing\ 6.png');
+    background-image: url(../asset/sec-bg.png);
     display: flex;
     justify-content: center;
-    align-items: center;
+    background-position: center;
+    align-items: center; 
     flex-direction: column;
     text-align: center;
     width: 1440px;
